# bmd-speededitor-rs

./: Cargo.toml  LICENSE  README.md
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/osc/: Cargo.toml
examples/osc/src/: main.rs
src/: lib.rs  speed_editor.rs
src/speed_editor/: handler.rs  key.rs  key_led.rs
