[package]
name = "bmd-speededitor"
version = "0.2.1"
authors = ["Akira Kamikura <akira.kamikura@gmail.com>"]
edition = "2021"
keywords = ["blackmagicdesign", "speededitor"]
repository = "https://github.com/camikura/bmd-speededitor-rs"
license-file = "LICENSE"
readme = "README.md"
description = "Speed Editor HID implementation in Rust"

[workspace]
members = [
    "examples/basic",
    "examples/osc"
]

[dependencies]
hidapi = "1.4.1"
chrono = "0.4"
num_enum = "0.5"
strum = "0.24"
strum_macros = "0.24"
